[package]
name = "laser_tower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
game_loop = { workspace = true }
health = { workspace = true }
merchandise = { workspace = true }
popups = { workspace = true }
shop = { workspace = true }
tilemap = { workspace = true }
tiles = { workspace = true }
