[package]
name = "lasers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game_loop = { workspace = true }
tilemap = { workspace = true }

bevy = { workspace = true }
bevy_gizmos = { workspace = true }

hexx = { workspace = true }

