[package]
name = "map_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
entropy = { workspace = true }
game_loop = { workspace = true }
mountain = { workspace = true }
resource_deposit = { workspace = true }
tiles = { workspace = true }
tilemap = { workspace = true }

#stdx
itertools = "0.13"
noise = "0.9"
rand = "0.8"

