[package]
name = "merchandise"
version = "0.1.0"
edition = "2021"

[dependencies]
# plugins
game_loop = { workspace = true }
sounds = { workspace = true }
tiles = { workspace = true }
# bevy
bevy = { workspace = true }
bevy_anyhow_alert = { workspace = true }
# stdx
thiserror = { workspace = true }
