[package]
name = "refractor"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
game_loop = { workspace = true }
health = { workspace = true }
merchandise = { workspace = true }
popups = { workspace = true }
shop = { workspace = true }
tilemap = { workspace = true }
tiles = { workspace = true }
