[package]
name = "shop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true, features = ["bevy_ui"] }
game_loop = { workspace = true }
merchandise = { workspace = true }
sickle_ui = { workspace = true }
tilemap = { workspace = true }
tiles = { workspace = true }
