[package]
name = "tiles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
hexx = { workspace = true }
lasers = { workspace = true }
game_loop = { workspace = true }
tilemap = { workspace = true }
